tests/files/lexer_tests/should_fail/083.cmdr
//Should not parse since no int
timeout "hi" echo;